[package]
name = "twitch_ranos"
version = "0.1.0"
authors = ["fluhzar"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
smol = "1.2"
time = "0.2"
twitchchat = { version = "0.14", features = ["async", "smol", "async-tls"] }
